--- a/html y php/administrador/css/principal.css
+++ b/html y php/administrador/css/principal.css
@@ -6,57 +6,88 @@ body {
     padding: 0;
     font-family: serif;
     background-color: #EAF4F4;
+    background: linear-gradient(to bottom left,#bcd8e4, #849cca);
     display: flex;
     flex-direction: column;
     min-height: 100vh;
 }
 
-.containernav {
-    background: black;
-    padding: 0 3rem; 
-    box-sizing: border-box;
-}
+:root {
+	--main-bg-color: #009d63;
+	--main-text-color: #009d63;
+	--second-text-color: #76787c;
+	--second-bg-color: #c1efde;
+  }
+  
+  .primary-text {
+	color: var(--main-text-color);
+  }
+  
+  .second-text {
+	color: var(--second-text-color);
+  }
 
-.logo {
-    display: flex;
-    align-items: center;
-}
+  
+  .primary-bg {
+	background-color: var(--main-bg-color);
+  }
+  
+  .secondary-bg {
+	background-color: var(--second-bg-color);
+  }
+  
+  .rounded-full {
+	border-radius: 100%;
+  }
+  
+  #wrapper {
+	overflow-x: hidden;
+    background: linear-gradient(to bottom left,#bcd8e4, #849cca);
+  }
+  
+  #sidebar-wrapper {
+	min-height: 100vh;
+	margin-left: -15rem;
+	-webkit-transition: margin 0.25s ease-out;
+	-moz-transition: margin 0.25s ease-out;
+	-o-transition: margin 0.25s ease-out;
+	transition: margin 0.25s ease-out;
+  }
+  
+  #sidebar-wrapper .sidebar-heading {
+	padding: 0.875rem 1.25rem;
+	font-size: 1.2rem;
+  }
+  
+  #sidebar-wrapper .list-group {
+	width: 15rem;
+  }
+  
+  #page-content-wrapper {
+	min-width: 100vw;
+  }
+  
+  #wrapper.toggled #sidebar-wrapper {
+	margin-left: 0;
+  }
+  
+  #menu-toggle {
+	cursor: pointer;
+  }
+  
+  .list-group-item {
+	border: none;
+	padding: 20px 30px;
+  }
+  
+  .list-group-item.active {
+	background-color: transparent;
+	color: var(--main-text-color);
+	font-weight: bold;
+	border: none;
+  }
 
-.logo img {
-    width: 68px;
-    height: 68px;
-    margin-right: 10px;
-}
-
-.logo h2 {
-    font-family: 'Lucida Sans', 'Lucida Grande', 'Lucida Sans Unicode', sans-serif;
-    font-size: 30px;
-    color: #f1f1f1;
-    margin: 0;
-}
-
-.item-options {
-    color: #f1f1f1;
-    margin: 0 9px;
-    text-decoration: none;
-    font-size: 25px;
-}
-
-.item-options:hover {
-    color: #8FB8DE;
-}
-
-.main-container {
-    flex: 1;
-    padding-top: 45px;
-    padding-bottom: 55px;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
-    gap: 1rem;
-    align-items: start;
-}
-
-.card {
+  .card {
     color: #000;
     background-color: white;
     padding: 1rem;
@@ -145,3 +176,18 @@ body {
     opacity: .4;
     font-weight: 200;
 }
+
+@media (min-width: 768px) {
+	#sidebar-wrapper {
+	  margin-left: 0;
+	}
+  
+	#page-content-wrapper {
+	  min-width: 0;
+	  width: 100%;
+	}
+  
+	#wrapper.toggled #sidebar-wrapper {
+	  margin-left: -15rem;
+	}
+  }
