--- a/html y php/administrador/css/inicio2.css
+++ b/html y php/administrador/css/inicio2.css
@@ -18,31 +18,9 @@ body {
     box-sizing: border-box;
     position: sticky;
     z-index: 1000;
+    box-shadow: 0px 10px rgba(0, 0, 0, 0.2);
  }
- 
- .logo {
-    display: flex;
-    align-items: center;
- }
- 
- .logo img {
-    width: 68px;
-    height: 68px;
-    margin-right: 10px;
- }
- 
- .logo h2 {
-    font-family: 'Lucida Sans', 'Lucida Grande', 'Lucida Sans Unicode', sans-serif;
-    font-size: 30px;
-    color: #f1f1f1;
-    margin: 0;
- }
- .item-options{
-    color: #f1f1f1;
-    margin: 0 9px;
-    text-decoration: none;
- }
- 
+
  .main-container {
     width: 100%;
     display: flex;
@@ -52,138 +30,142 @@ body {
     justify-content: center; 
     padding-top: 5px;
  }
-
- .inicio {
-    border: 1px solid white;
-    height: 25rem;
-    width: 35%;
-    border-radius: 1rem;
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
-    overflow: hidden; 
-    border: 2px solid #000;
+ .nav-link {
+  color: white;
 }
 
-.titulo {
-    background-color: #A4C3B2;
-    border-top-left-radius: 1rem;
-    border-top-right-radius: 1rem;
-    padding: 1rem 0; 
-    margin-bottom: 1rem; 
-    text-align: center; 
-    border-bottom: 1px solid #000;
+.main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 50vh;
 }
-
-.titulo h1 {
-    color: #000;
-    font-size: 30px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin: 0; 
+.side-image{
+    background-image: url("images/2.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 10px 0 0 10px;
+    position: relative;
 }
-
-.titulo p {
-    color: #000;
-    font-size: 17px;
+.row{
+  width:  1100px;
+  height:550px;
+  border-radius: 10px;
+  background: linear-gradient(to bottom,#2a94ace4, #3c747c);
+  padding: 0px;
+  box-shadow: 10px 10px  rgba(0,0,0,0.2);
+}
+i{
+    font-weight: 400;
+    font-size: 15px;
+}
+.right{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.input-box{
+  width: 330px;
+  box-sizing: border-box;
+}
+.side-image img{
+    width: 110%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+.input-box header{
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 75px;
     font-family: serif;
-    margin: 0.5rem 0 0 0; 
 }
-.datos {
+.input-field{
     display: flex;
     flex-direction: column;
-    margin-bottom: 1.5rem;
+    position: relative;
+    padding: 0 10px 0 10px;
 }
-
-label {
-    font-size:18px;
-    color: #333;
-    margin-bottom: 0.5rem; 
-    margin-left: 20px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-input[type="text"],
-input[type="password"] {
-    padding: 0.8rem;
-    width: 25rem;
-    margin-left: 2rem;
-    border: 1px solid #000;
-    border-radius: 5rem;
-    font-size: 1rem;
-    font-family: 'Poppins', sans-serif;
-    background-color: #f9f9f9; 
-    transition: border-color 0.3s;
-}
-
-input[type="text"]:focus,
-input[type="password"]:focus {
-    border-color: #8FB8DE; 
-    outline: none;
-}
-
-input[type="text"]::placeholder,
-input[type="password"]::placeholder {
-    color: #999;
-    font-style: italic;
-}
-
-.btn input[type="submit"]{
-    font-size: 20px;
-    padding: 10px 50px;
-    text-decoration: none;
-    background-color: #000;
-    color: white;
+.input{
+    height: 45px;
+    width: 100%;
+    background: transparent;
     border: none;
-    border-radius: 5rem;
-    cursor: pointer;
-    margin: 1rem 10rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    outline: none;
+    margin-bottom: 20px;
+    color: #40414a;
 }
-
-
-
-.btn  input[type="submit"]:hover {
-    background:linear-gradient(to bottom right,#A4C3B2,#000);
-    color: black;
+.input-box .input-field label{
+    position: absolute;
+    top: 0px;
+    left: 10px;
+    pointer-events: none;
+    transition: .5s;
 }
-
-
-.socials {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.socials a {
-    text-decoration: none;
-    color: #fff;
-}
-
-.socials a i {
-    font-size: 17px;
-    padding: 0px 20px;
-    transition: color .4s ease;
-}
-
-.socials a:hover i {
-    color: hsl(274, 100%, 51%);
-}
-
-.footer-bottom {
+.input-field input:focus ~ label
+   {
+    top: -10px;
+    font-size: 13px;
+  }
+  .input-field input:valid ~ label
+  {
+   top: -10px;
+   font-size: 13px;
+   color: #5d5076;
+ }
+ .input-field .input:focus, .input-field .input:valid{
+    border-bottom: 1px solid #743ae1;
+ }
+ .submit{
+    border: none;
+    outline: none;
+    height: 45px;
     background: #000;
-    width: 100%; 
-    padding: 20px 0;
-    text-align: center;
-   margin: 0 auto;
-}
-
-.footer-bottom p {
-    font-size: 14px;
     color: white;
-    word-spacing: 2px;
-    text-transform: capitalize;
+    border-radius: 5px;
+    transition: .4s;
+    margin-top: 10%;
+ }
+ .submit:hover{
+    background: linear-gradient(to bottom left ,#000,#545454);
+    color: #fff;
+ }
+
+span a{
+    text-decoration: none;
+    font-weight: 700;
+    color: #000;
+    transition: .5s;
+}
+span a:hover{
+    text-decoration: underline;
+    color: #000;
 }
 
-.footer-bottom span {
-    text-transform: uppercase;
-    opacity: .4;
-    font-weight: 200;
+@media only screen and (max-width: 768px){
+    .side-image img{
+        width: 353px;
+        position: absolute;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+    }
+    .text{
+        position: absolute;
+        top: 70%;
+        text-align: center;
+    }
+    .text p, i{
+        font-size: 16px;
+    }
+    .row{
+        max-width:420px;
+        width: 100%;
+        box-shadow: 0px 0px  rgba(0,0,0,0.2);
+    }
 }
